--- a/TriviaQuiz/src/main/AndroidManifest.xml
+++ b/TriviaQuiz/src/main/AndroidManifest.xml
@@ -10,18 +10,34 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/quiz_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:debuggable="true">
         <activity
-            android:name="tk.liosha.triviaquiz.QuizActivity"
-            android:label="@string/app_name" >
+            android:name=".QuizSplashActivity"
+            android:label="@string/game" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".QuizGameActivity"
+            android:label="@string/game" />
+        <activity
+            android:name=".QuizMenuActivity"
+            android:label="@string/menu" />
+        <activity
+            android:name=".QuizSettingsActivity"
+            android:label="@string/settings" />
+        <activity
+            android:name=".QuizScoresActivity"
+            android:label="@string/scores" />
+        <activity
+            android:name=".QuizHelpActivity"
+            android:label="@string/help" />
     </application>
 
 </manifest>
